# mirilli

./: .dockerignore  .gitignore  .gitmodules  .renvignore  DATASET.md  DEMO.md  Dockerfile  LICENSE  LICENSE-MIT  README.md  USAGE.md  abis.r  check.sh  clean.sh  compile.py  configure.sh  count.sh  exec.sh  find_tests.sh  init.sh  makefile  pass_rates.r  pkglist  random.csv  run_tests.sh  sample.r  select.r  start.sh  testcount.sh  verify.sh
appendix/: output.out  output.tex  output.toc  proofs.tex
appendix/sections/: results.tex  semantics.tex
appendix/tables/: bugs.tex  deduplication.tex  popularity.tex  sb_outcomes.tex  tests.tex
appendix/types/: conversion.tex  domains.tex  environments.tex  heap.tex  metafunctions.tex  type_syntax.tex  value_syntax.tex  well_formedness.tex
coding/: select.r
coding/repos/: backtrace.md
coding/samples/: improper_types.csv
data/: 500.csv  abi_subset.csv  all.csv  all_crates_latest_version.csv  all_random.csv  bugs.csv  captured_abi_subset.csv  category_error_counts.csv  depends_bindgen.csv  depends_libc.csv  disabled_decl.csv  disabled_defn.csv  discriminants.csv  download_counts_1yr.csv  error_cases.csv  eval.csv  excluded.csv  external_ffi_bindings.csv  failed_compilation.csv  failed_rerun.csv  ffi_to_test.csv  ffi_to_test_80.csv  finished_early.csv  finished_late.csv  flags.csv  foreign_module_abis.csv  grep.csv  item_error_counts.csv  pass_rates.r  population.sql  reasons.csv  rerun.csv  rust_function_abis.csv  sample.r  string_error_counts.csv  test.csv  to_recheck.csv  unfiltered.csv
data/audit/: .RData  .Rhistory  01-intro.Rmd  02-data.Rmd  02-quantitative.Rmd  03-improper.Rmd  04-sampling.Rmd  404.html  _bookdown.yml  _main.Rmd  index.Rmd  packages.bib
data/coding/: select.r
data/compiled/: abi_subset.csv  abi_subset_early.csv  captured_abi_subset.csv  category_error_counts.csv  early_abis.csv  early_names_failed_late.csv  error_counts.csv  error_info.csv  error_locations.csv  error_summary.csv  errors_to_examine.csv  finished_early.csv  finished_late.csv  grep_c_ffi_tests.csv  grep_ffi_tests.csv  late_abis.csv  lint_info.csv  tests_failed_miri_ffi.csv  tests_failed_miri_sample.csv  tests_with_ub.csv  ub_summary.csv
data/latex/: err_counts.tex  err_type_counts.tex
data/notebooks/: abi_distribution.Rmd  abi_distribution.nb.html  improper_type_errors.Rmd  improper_type_errors.nb.html
data/old_partitions/: partition11.csv  partition2.csv  partition3.csv  partition4.csv  partition5.csv  partition6.csv  partition7.csv  partition8.csv
data/partitions/: 2.csv  8.csv  bug_smoke.csv  missed_stage1.csv  missed_stage2.csv  p1.csv  p10.csv  p11.csv  p13.csv  p2.csv  p22.csv  p3.csv  p4.csv  p5.csv  p6.csv  p7.csv  p8.csv  partition1.csv  partition10.csv  partition11.csv  smoke_check.csv  test-uninit.csv
demo/: population.csv
demo/figure3/: Cargo.toml  build.rs
demo/figure4/: Cargo.toml  build.rs  rust-toolchain.toml
demo/large/: population.csv  stage3.csv
demo/small/: population.csv
demo/test/: population.csv  test.csv
early/src/: lib.rs
late/src/: lib.rs
proof/: _CoqProject  types.v
scripts/: cargo-download.sh  compile.py  dependents.sql  depends_on_ffi.sql  discriminants.csv  extract.sh  extract_abi_subset.r  extract_miri_tests.r  fix.py  flags.csv  init.sql  initdb.sh  install_docker.sh  population.sql  summarize.r  summarize_exec.r  validate.r  visualize.r
scripts/all/: stats.r  summarize.r  validate.r
scripts/misc/: cargo-download.sh  exclude_libcxx.txt  list_instances.sh  pull.sh  push.sh  remove.sh  rename.sh
scripts/stage1/: collect_order.sql  compile.py  extract.sh  extract_tests.sh  run.sh  (+1 more)
src/early/: Cargo.toml  rust-toolchain
src/early/src/: lib.rs
src/late/: Cargo.toml  rust-toolchain
src/late/src/: compare.rs  current.rs  lib.rs
(+1044 files in other folders)
