[package]
name = "ffickle_early"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "5eb7604482f8f3264605c0e440861223576d6faf" }
dylint_linting = "2.0.13"
if_chain = "1.0.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dependencies.shared]
path = "../shared"

[dev-dependencies]
dylint_testing = "2.0.13"

[package.metadata.rust-analyzer]
rustc_private = true
