[package]
name = "ffickle_late"
version = "0.1.0"
authors = ["Ian McCormack"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "7198989d45e4e47ccc30077c522468cac172766c" }
dylint_linting = "2.0.13"
if_chain = "1.0.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
rustc-workspace-hack = "1.0.0"

[dev-dependencies]
dylint_testing = "2.0.13"

[package.metadata.rust-analyzer]
rustc_private = true
