[package]
name = "ffickle_late"
version = "0.1.0"
authors = ["Ian McCormack"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "83e42a2337dadac915c956d125f1d69132f36425" }
dylint_linting = "2.0.13"
if_chain = "1.0.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
rustc-workspace-hack = "1.0.0"

[dependencies.shared]
path = "../shared"

[dev-dependencies]
dylint_testing = "2.0.13"

[package.metadata.rust-analyzer]
rustc_private = true
